--- a/ShoesAdmin/src/app/components/form-user/form-user.component.html
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.html
@@ -100,7 +100,7 @@
                                 </div>
 
                                 <div class="form-actions center">
-                                    <button type="button" class="btn btn-raised btn-warning mr-1" routerLink="/nhanvien">
+                                    <button type="button" class="btn btn-raised btn-warning mr-1" routerLink="/index/nhanvien">
                                         <i class="ft-corner-up-left"></i> Quay lại
                                     </button>
                                     <button type="button" (click)="showModal(chitiet_NV.id)" class="btn btn-raised btn-primary">
