--- a/ShoesAdmin/src/app/components/invoice/invoice.component.html
+++ b/ShoesAdmin/src/app/components/invoice/invoice.component.html
@@ -112,7 +112,7 @@
           <div id="invoice-footer">
             <div class="row">
               <div class="col-md-3 col-sm-12 text-center">
-                <button type="button" class="btn btn-primary btn-raised my-1" routerLink="/hoadon">
+                <button type="button" class="btn btn-primary btn-raised my-1" routerLink="/index/hoadon">
                   <i class="ft-corner-up-left"></i> Quay lại</button>
               </div>
             </div>
