--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -9,7 +9,7 @@
           </div>
           <div class="card-body collapse show">
             <div class="card-block">
-              <button id="addRow" class="btn btn-primary mb-2" routerLink="/nhanvien/0">
+              <button id="addRow" class="btn btn-primary mb-2" routerLink="/index/nhanvien/0">
                 <i class="ft-user-plus"></i>&nbsp; Thêm mới</button>
               <table id="table_nv" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                 <thead>
@@ -32,7 +32,7 @@
                     <td>{{nv.email}}</td>
                     <td>{{nv.diaChi}}</td>
                     <td>
-                      <a class="success p-0" data-original-title="" title="Cập nhật" routerLink="/nhanvien/{{nv.id}}">
+                      <a class="success p-0" data-original-title="" title="Cập nhật" routerLink="/index/nhanvien/{{nv.id}}">
                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                       </a>
                       <!-- <a class="danger p-0" data-original-title="" data-toggle="modal" (click)="showModal()" title="Xóa">
