update validation nhanvien

--- a/ShoesAdmin/src/app/components/form-user/form-user.component.css
+++ b/ShoesAdmin/src/app/components/form-user/form-user.component.css
@@ -79,3 +79,8 @@ button.close:focus {
 a.info.p-0 {
     font-size: 20px;
   }
+em {
+    color: red;
+    font-size: 14px;
+    font-style: italic;
+}
