--- a/ShoesAdmin/src/app/components/form-sanpham/form-sanpham.component.css
+++ b/ShoesAdmin/src/app/components/form-sanpham/form-sanpham.component.css
@@ -27,7 +27,6 @@
 .modal-wrapper.show{
   opacity: 0.6;
   background-color: rgb(0,0,0); /* Fallback color */
-  
 }
 html, body, .modal-wrapper{
   width: 100%;
@@ -106,10 +105,6 @@ form .form-actions{
   border-top: 0;
 }
 
-/* input#file {
-  padding: 5px 10px;
-  background: #E9EAEC;
-} */
 .upload {
   margin: 0;
   box-sizing: border-box;
@@ -123,7 +118,30 @@ table#table_sp {
   border-radius: 5px;
   margin-top: 10px;
 }
+.col-md-12.col-upload {
+  margin-top: 15px;
+}
 
-div.col-upload button.btnUpload {
-  margin-bottom: 0;
+.card-body .px-3 {
+  padding: 0 !important;
+}
+
+.col-md-12.form-group {
+  width: 100%;
+  margin: 0;
+}
+
+input#userinput1 {
+  width: 100%;
+}
+
+.col-md-12 .form-group {
+  margin: 0;
+  width: 100%;
+}
+
+em {
+  color: red;
+  font-size: 14px;
+  font-style: italic;
 }
