Update Insert Product

--- a/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
+++ b/ShoesAdmin/src/app/components/chitiet-sanpham/chitiet-sanpham.component.html
@@ -56,8 +56,8 @@
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <label for="userinput4">Chiết khấu</label>
-                        <input type="text" formControlName="chietKhau" value="{{chitietSp.chietKhau}}" id="userinput4" class="form-control border-primary"
+                        <label for="userinput4">Chiết khấu (%) </label>
+                        <input type="text" formControlName="chietKhau" value="{{chitietSp.chietKhau * 100}}" id="userinput4" class="form-control border-primary"
                           name="nickname">
                       </div>
                     </div>
