--- a/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
+++ b/ShoesAdmin/src/app/components/loaigiay/loaigiay.component.html
@@ -14,7 +14,7 @@
             <div class="card-block">
               <button id="addRow" class="btn btn-primary mb-2" (click)="showModalInsert()">
                 <i class="ft-plus-square"></i>&nbsp; Thêm mới</button>
-              <table id="table_lg" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
+              <table id="table_giay" class="table table-striped table-bordered sourced-data dataTable" role="grid" aria-describedby="DataTables_Table_0_info">
                 <thead>
                   <tr>
                     <th>Mã Giày</th>
